force-app/main/default/objects/ssot__RecordAggregationResult__dlm/fields/ssot__AggregateFromRecordId__c.field-meta.xml
<CustomField>
    <fullName>ssot__AggregateFromRecordId__c</fullName>
    <label>Aggregate From Record</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AggregateFromRecordId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>