force-app/main/default/objects/ssot__RecordAggregationResult__dlm/fields/ssot__AggregateToRecordId__c.field-meta.xml
<CustomField>
    <fullName>ssot__AggregateToRecordId__c</fullName>
    <label>Aggregate To Record</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AggregateToRecordId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>