force-app/main/default/objects/ssot__RecordAggregationResult__dlm/fields/ssot__RecordAggregationDefinitionName__c.field-meta.xml
<CustomField>
    <fullName>ssot__RecordAggregationDefinitionName__c</fullName>
    <label>Record Aggregation Definition Name</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>RecordAggregationDefinitionName</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>